# SrunAuth

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  testreg.c
include/: SHA1.h  http.h  my_tcpclient.h  url_parse.h  xencode.h
lib/: SHA1.c  a.out  base64.c  hmac_md5.h  md5.c  test  test.c  xencode.c
source/: Srun_auth.c  hmac_md5.c  http.c  url_parse.c  xencode.c
src/: Makefile  cmake_install.cmake  test.c
